feat/go : Add POST route for file upload.
